<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:title="@string/account"/>
        <item
            android:id="@+id/nav_eduSystem"
            android:title="@string/lead"/>
        <item
            android:id="@+id/nav_add"
            android:title="@string/hand"/>
        <item
            android:id="@+id/nav_score"
            android:title="@string/query"/>
        <item
            android:id="@+id/nav_theme"
            android:title="@string/choose_theme"/>
        <item
            android:id="@+id/nav_upData"
            android:title="@string/upData"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/about"/>
    </group>

</menu>