<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_about_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/main_card_margin_vertical"
    android:layout_marginLeft="@dimen/main_card_margin_horizontal"
    android:layout_marginRight="@dimen/main_card_margin_horizontal"
    android:layout_marginTop="@dimen/main_card_margin_vertical"
    android:background="@color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.bilibili.magicasakura.widgets.TintTextView
            android:id="@+id/tv_card_about_2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/about_card2_title"
            android:textColor="@color/theme_color_primary_trans"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_card_about_2_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_card_about_2_1"
            android:background="@color/main_background" />

        <LinearLayout
            android:id="@+id/jsoup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_card_about_2_line"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/jhy"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/litepal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/jsoup"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/github"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/litepal"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/md"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/litepal"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/eajy"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/whell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/md"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/text_margin"
        android:src="@drawable/github" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/venshine"
            android:textStyle="italic" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/coursetable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/whell"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/whuajian"
                android:textStyle="italic" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/coursetable"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/tess"
                android:textStyle="italic" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/urp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tess"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/urp"
                android:textStyle="italic" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/urp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/okhttp"
                android:textStyle="italic" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>