<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="site.imcu.lcus.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/add_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_location" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.wx.wheelview.widget.WheelView
            android:id="@+id/chose_week"
            android:layout_width="80sp"
            android:layout_height="100sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="125sp"
            android:gravity="center_vertical"
            android:text="第"
            android:textSize="25sp"/>
        <com.wx.wheelview.widget.WheelView
            android:id="@+id/chose_order"
            android:layout_width="60sp"
            android:layout_height="80sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:gravity="center_vertical"
            android:text="节至"
            android:textSize="25sp"/>
        <com.wx.wheelview.widget.WheelView
            android:id="@+id/chose_span"
            android:layout_width="60sp"
            android:layout_height="80sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:gravity="center_vertical"
            android:text="节"
            android:textSize="25sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/add_save"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:text="@string/add_save"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>