<com.bilibili.magicasakura.widgets.TintLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="site.imcu.lcus.activity.LoginActivity">
    <include layout="@layout/toolbar"/>
    <com.bilibili.magicasakura.widgets.TintLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.bilibili.magicasakura.widgets.TintLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.bilibili.magicasakura.widgets.TintEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_name"
                android:inputType="text"
                android:background="@drawable/ic_edit_text_default"
                android:drawableLeft="@drawable/course"
                android:drawablePadding="@dimen/padding_half"
                android:maxLines="1"
                android:padding="@dimen/padding_half"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:textSize="13sp"
                app:backgroundTint="@color/selector_focus"
                app:drawableLeftTint="@color/selector_focus" />
            <com.bilibili.magicasakura.widgets.TintEditText
                android:id="@+id/edit_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_location"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:background="@drawable/ic_edit_text_default"
                android:drawableLeft="@drawable/location"
                android:drawablePadding="@dimen/padding_half"
                android:padding="@dimen/padding_half"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:textSize="13sp"
                app:backgroundTint="@color/selector_focus"
                app:drawableLeftTint="@color/selector_focus"/>

            <com.bilibili.magicasakura.widgets.TintEditText
                android:id="@+id/edit_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_teacher"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:background="@drawable/ic_edit_text_default"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="@dimen/padding_half"
                android:padding="@dimen/padding_half"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:textSize="13sp"
                app:backgroundTint="@color/selector_focus"
                app:drawableLeftTint="@color/selector_focus"/>

            <com.bilibili.magicasakura.widgets.TintEditText
                android:id="@+id/edit_span"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_span"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:background="@drawable/ic_edit_text_default"
                android:drawableLeft="@drawable/span"
                android:drawablePadding="@dimen/padding_half"
                android:padding="@dimen/padding_half"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:textSize="13sp"
                app:backgroundTint="@color/selector_focus"
                app:drawableLeftTint="@color/selector_focus"/>

            <com.bilibili.magicasakura.widgets.TintEditText
                android:id="@+id/edit_weekList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_week_list"
                android:inputType="text"
                android:maxLines="1"
                android:background="@drawable/ic_edit_text_default"
                android:drawableLeft="@drawable/week_list"
                android:drawablePadding="@dimen/padding_half"
                android:padding="@dimen/padding_half"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:textSize="13sp"
                app:backgroundTint="@color/selector_focus"
                app:drawableLeftTint="@color/selector_focus"/>L

        </com.bilibili.magicasakura.widgets.TintLinearLayout>


    </com.bilibili.magicasakura.widgets.TintLinearLayout>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/main_card_margin_vertical"

        android:layout_marginLeft="@dimen/main_card_margin_horizontal"

        android:layout_marginRight="@dimen/main_card_margin_horizontal"

        android:layout_marginTop="@dimen/main_card_margin_vertical"

        card_view:cardCornerRadius="1dp"

        card_view:cardElevation="1dp">



        <RelativeLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:background="?android:selectableItemBackgroundBorderless"

            android:clickable="true">



            <com.bilibili.magicasakura.widgets.TintImageView

                android:id="@+id/img_card_about_1"

                android:layout_width="64dp"

                android:layout_height="128dp"

                android:background="@color/gray_very_light"
                android:scaleType="center"

                android:src="@drawable/notepad"/>



            <RelativeLayout

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_centerVertical="true"

                android:layout_marginEnd="@dimen/text_margin"

                android:layout_marginStart="@dimen/card_title_margin"

                android:layout_toEndOf="@id/img_card_about_1">

                <com.bilibili.magicasakura.widgets.TintEditText
                    android:id="@+id/edit_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_note"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:background="@drawable/ic_edit_text_default"
                    android:drawablePadding="@dimen/padding_half"
                    android:padding="@dimen/padding_half"
                    android:textCursorDrawable="@drawable/edit_text_cursor"
                    android:textSize="13sp"
                    app:backgroundTint="@color/selector_focus"
                    app:drawableLeftTint="@color/selector_focus"/>


            </RelativeLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</com.bilibili.magicasakura.widgets.TintLinearLayout>